--- a/4-sol/4-sol.tex
+++ b/4-sol/4-sol.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt,a4paper, spanish]{article}
 % Sacar draft para que aparezcan las imagenes.
-% Opciones: 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
+% Opciones: 12pt, 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
 % Opciones de clase: article, report, letter, beamer...
 
 % Paquetes:
@@ -180,6 +180,8 @@
 		      \item $(a:1) = 1$
 		      \item $(a:0) = |a|,\ \paratodo a \en \enteros -\set{0}$
 		      \item si $b \divide a \entonces \mcd = |b|$ si $b \en \enteros - \set{0}$
+		      \item $\mcd = (a: b+na)$ con $n \en \enteros$
+		      \item $\mcd = (a: r_a(b))$ con $n \en \enteros$
 	      \end{itemize}
 
 	\item \textit{Algoritmo de Euclides}:
@@ -222,17 +224,149 @@
 
 		      \item Sean $a, c, d \en \enteros$ con $c,d$ no nulos. Entonces:
 		            \[
-			            c \divide a \ytext d \divide a \ytext c \cop d \entonces c\cdot d \divide a
+			            c \divide a \ytext d \divide a \ytext c \cop d \red{$\sisolosi$} c\cdot d \divide a
 		            \]
 		      \item Sean $a, b, d \en \enteros$ con $d \distinto 0$. Entonces:
 		            \[
-			            d \divide a\cdot b \ytext d \divide a \entonces d \divide b
+			            d \divide a \cdot b \ytext d \cop a   \entonces d \divide b
 		            \]
 
 	      \end{itemize}
 
+	\item \textit{\underline{Primos y Factorización:}}
+	      \begin{itemize}
+		      \item Sea $p$ primo y sean $a,b \en \enteros$. Entonces:
+		            \[
+			            p \divide a\cdot b \entonces p \divide a \o p \divide b
+		            \]
+		      \item \textit{Si $p$ divide a algún producto de números, tiene que dividir a alguno de los factores $\to$}\\
+		            Sean $a_1,\dots, a_n \en \enteros$:\\
+		            \begin{center}
+			            $
+				            \llave{l}{
+					            p \divide a_1 \cdot a_2 \cdots a_n \entonces p \divide a_i \text{ para algún } i \text{ con } 1 \leq i \leq n.\\
+					            p \divide a^n \entonces p \divide a.
+				            }$
+		            \end{center}
+		      \item Si $a \en \enteros$, $p$ primo:\\
+		            \begin{center}
+			            $\llave{l}{
+					            (a:p) = 1 \sisolosi p \noDivide a\\
+					            (a:p) = p \sisolosi p \divide a
+				            }$
+		            \end{center}
+		      \item Sea $n \en \enteros - \set{0},\, n = \ub{s }{\set{-1,1}} \cdot \productoria{i=1}{r} p_i^{\alpha_i} $ su factorización
+		            en primos. Entonces todo divisor positivo de $n$ se escribe como:\\
+		            \[
+			            \llave{c}{
+			            \productoria{i=1}{r} p_i^{\beta_i} \text{ con } 0 \leq \beta_i \leq \alpha,\, \paratodo 1\leq i \leq r\\
+			            \text{ y hay } \\
+			            (\alpha_1 + 1) \cdot (\alpha_2 + 1)\cdots (\alpha_r + 1) = \productoria{i=1}{r} \alpha_i +1 \\
+			            \text{divisores positivos de } n.
+			            }\]
+	      \end{itemize}
+
 \end{itemize}
 \subsubsection*{Ejercicios dados en clase:}
+
+\ejercicio
+Ejercicio parcial
+\begin{enumerate}[label=\roman*)]
+	\item Calcular los posibles valores de: $(7^{n-1} + 5^{n+2} : 5\cdot 7^n - 5^{n+1})$.
+	\item Encontrar $n$ tales que el mcd para ese $n$ tome 3 valores distintos.
+\end{enumerate}
+
+\separadorCorto
+Busco independencia de $n$ en algún lado del $\mcd$. Si $ d = (7^{n-1} + 5^{n+2} : 5\cdot 7^n - 5^{n+1})\to\\
+	\llave{l}{
+		d \divide 7^{n-1} + 5^{n+2} \\
+		d \divide 5\cdot 7^n - 5^{n+1}
+	}
+	\to
+	\llave{l}{
+		d \divide \ub{7^{n-1} + 5^{n+2}}{\congruente 2^n\ (5)} \\
+		d \divide 5 \cdot ( 7^n - 5^n)
+	}
+	\flecha{$p \noDivide d \y d \divide p \cdot k$}[$\entonces p \divide k$]
+	\llave{l}{
+		d \divide 7^{n-1} + 5^{n+2} \\
+		d \divide 7^n - 5^n
+	}\\
+	\to
+	\llave{l}{
+		d \divide 176 \cdot 5^n \\
+		d \divide 7^n - 5^n
+	}
+	\flecha{$p \noDivide d \y d \divide p \cdot k$}[$\entonces p \divide k$]
+	\llave{l}{
+		d \divide 176 \\
+		d \divide 7^n - 5^n
+	}
+	\to d = (176 : 7^n - 5^n) \Tilde\\
+$
+Factorizo: $176 = 2^4 \cdot 11 \to \divsetP{176}{1,2,4,8,11,16,22,44,88,176}$.\\
+Descarto
+$\to
+	\llave{lclcl}{
+		1           & \to &\congruencia{7^n - 5^n}{2^n}{5} &\to & d \text{ tiene que ser par y } 2 > 1\\
+		11          & \to &\congruencia{7^n - 5^n}{2^n}{5} &\to & d \text{ tiene que ser par}\\
+	}\\
+	\divsetP{d}{2,4,8,16,22,44,88,176}\\
+$
+Estudio congruencia de los pares e impares:
+$
+	\llave{l}{
+		\congruencia{7^{2k} - 5^{2k}}{1^k -25^k}{8} \to \congruencia{1 - \ub{1}{\stackrel{(8)}\congruente 25}}{0}{8}\\
+		\congruencia{7^{2k+1} - 5^{2k+1}}{3 - 1}{4} \to \congruente 2\,(4)\\
+	}\\
+$ Puedo descartar a los múltiplos de 4 que no sean múltiplos de 8.
+$	\to \divsetP{d}{2,8,16,22,88,176}$\\
+\red{No lo terminé, no entiendo bien este paso y como descartar algún otro.}
+
+
+\ejercicio
+Parcial del primer cuatrimestre 2024\\
+Estudiar los valores parar \textbf{todos} los $a \en \enteros$ de $(a^3 + 1 : a^2 - a + 1)$.\\
+\separadorCorto
+Primero hay que notar que el lado $a^2-a+1$ es siempre impar ya que:\\
+$\llaves{l}{
+		(2k-1)^2 - (2k -1) + 1 \stackrel{(2)}\congruente (-1)^2 -1 + 1 \stackrel{(2)}\congruente 1\\
+		(2k)^2 - (2k) +1 \stackrel{(2)}\congruente (0)^2 - 0 + 1\stackrel{(2)}\congruente 1.
+	}$ Por lo tanto 2 no puede ser un divisor de ambas expresiones  y si $2 \noDivide A \entonces 2 \cdot k \noDivide A$ tampoco.\\
+Se ve fácil contrarecíproco: $\ub{2k}{par} \divide A \entonces 2 \divide A$. Porque existe un $k$ tal que
+$2 \cdot c \cdot k = A \entonces 2 \cdot (c\cdot k) = A.$\\
+Ahora cuentas para simplificar la expresión y encontrar número del lado derecho.\\
+$
+	\llave{l}{
+		d \divide  a^3 + 1\\
+		d \divide  a^2 -a +1
+	}
+	\to d \divide 30
+	\to\divsetP{d}{1,2,3,5,6,10,15,30}
+	\flecha{por lo de antes}[no hay divisores pares] \divsetP{d}{1,3,5,15}\\
+	\flecha{hacer tabla de restos}[empezar por los números chicos]
+	\llaves{ccc}{
+		r_3(a^3 + 1) = 0 & \text{ si }& \congruencia{a}{2}{3}\\
+		\y& &\\
+		r_3(a^2 -a + 1) = 0 & \text{ si } & \congruencia{a}{2}{3}
+	}
+	\to
+	\llaves{cc}{
+		r_5(a^3 + 1) \distinto 0 & \paratodo a \en \enteros\\
+	}
+$.\\
+Luego si  $5 \noDivide (a^3 + 1 : a^2 - a + 1) \entonces \ub{15}{5\cdot 3} \noDivide (a^3 + 1 : a^2 - a + 1)
+	\flecha{se achica el}[conjunto de divisores] \divsetP{d}{1,3}\\
+	d = \llave{ccc}{
+		3 & \text{ si } & \congruencia{a}{2}{3}\\
+		1 & \text{ si } & \congruencia{a}{1 \o 2}{3}\\
+	}
+$
+
+
+
+
+
 
 \ejercicio
 Sean $a$, $b \en \enteros$ tal que $(a:b) = 6$. Hallar todos los $d = (2a + b : 3a - 2b)$ y dar un ejemplo en cada caso.\\
@@ -961,10 +1095,10 @@ $ Por lo tanto $(7a - 3b  : 2a -b) = 1$ son coprimos como se quería mostrar.
 %25
 \ejercicio
 Sea $p$ primo positivo.
-\begin{enumerate}[label=\roman*)] 
-  \item Probar que si $0 < k < p \divide \binom{p}{k}$. 
-  \item Probar que si $a, b \en \enteros$, entonces $\congruencia{(a+b)^p}{a^p + b^p}{p}$.
- \end{enumerate}
+\begin{enumerate}[label=\roman*)]
+	\item Probar que si $0 < k < p \divide \binom{p}{k}$.
+	\item Probar que si $a, b \en \enteros$, entonces $\congruencia{(a+b)^p}{a^p + b^p}{p}$.
+\end{enumerate}
 \separadorCorto
 
 
